--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -2,7 +2,11 @@
 <resources>
     <string name="app_name">Power Off</string>
 <string name="set_time_failed">Could not set new time schedule</string>
-<string name="app_list">Add AutoStart Application</string>
+<string name="app_list">Add AutoStart</string>
+<string name="about">About</string>
+<string name="more">More</string>
+<string name="poweroff_now">Power off now</string>
+<string name="reboot_now">Reboot now</string>
 <string name="alert_dialog_ok">OK</string>
 <string name="alert_dialog_cancel">Cancel</string>
 </resources>
